[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/UI - Words/Words without BG/UI - Words3.png" type="Texture" id=1]
[ext_resource path="res://assets/UI - Words/Words With BG/UI - Words1.png" type="Texture" id=2]
[ext_resource path="res://assets/UI - Words/Words without BG/UI - Words4.png" type="Texture" id=3]
[ext_resource path="res://assets/UI - Words/Words With BG/UI - Words4.png" type="Texture" id=4]
[ext_resource path="res://assets/UI - Words/Words With BG/UI - Words2.png" type="Texture" id=5]
[ext_resource path="res://assets/UI - ICONS/UI - Icons6.png" type="Texture" id=6]
[ext_resource path="res://assets/UI - Words/Words without BG/UI - Words2.png" type="Texture" id=7]
[ext_resource path="res://assets/UI - Words/Words without BG/UI - Words1.png" type="Texture" id=8]
[ext_resource path="res://assets/UI - Words/Words With BG/UI - Words3.png" type="Texture" id=14]
[ext_resource path="res://menu.gd" type="Script" id=16]
[ext_resource path="res://fonts/joystix monospace.ttf" type="DynamicFontData" id=17]

[sub_resource type="DynamicFont" id=1]
size = 45
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 17 )

[node name="menu" type="Control"]
script = ExtResource( 16 )

[node name="Label2" type="Label" parent="."]
margin_left = 279.0
margin_top = 111.0
margin_right = 612.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 1 )
text = "GAME NAME"

[node name="newGame" type="TextureButton" parent="."]
margin_left = 23.0
margin_top = 15.0
margin_right = 116.0
margin_bottom = 48.0
rect_scale = Vector2( 1.5, 1.5 )
focus_neighbour_top = NodePath("../quit")
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )

[node name="continue" type="TextureButton" parent="."]
margin_left = 23.0
margin_top = 79.0
margin_right = 116.0
margin_bottom = 112.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 2 )

[node name="settings" type="TextureButton" parent="."]
margin_left = 23.0
margin_top = 143.0
margin_right = 116.0
margin_bottom = 176.0
rect_scale = Vector2( 1.5, 1.5 )
focus_neighbour_bottom = NodePath("../quit")
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[node name="quit" type="TextureButton" parent="."]
margin_left = 23.0
margin_top = 223.0
margin_right = 116.0
margin_bottom = 256.0
rect_scale = Vector2( 1.5, 1.5 )
focus_neighbour_bottom = NodePath("../newGame")
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 14 )
texture_focused = ExtResource( 14 )

[node name="mute" type="TextureButton" parent="."]
margin_left = 23.0
margin_top = 263.0
margin_right = 55.0
margin_bottom = 295.0
rect_scale = Vector2( 2, 2 )
focus_neighbour_bottom = NodePath("../newGame")
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 6 )

[connection signal="pressed" from="newGame" to="." method="_on_newGame_pressed"]
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="mute" to="." method="_on_mute_pressed"]
